--- a/theme/macos-styles.css
+++ b/theme/macos-styles.css
@@ -81,7 +81,7 @@
 	--macos-hover-urlbar-border-color: var(--toolbar-field-border-color);
 	--macos-inactive-urlbar-background: var(--toolbar-field-background-color);
 	--macos-inactive-urlbar-border-color: var(--toolbar-field-border-color);
-	--macos-inactive-urlbar-box-shadow: none;
+	--macos-inactive-urlbar-box-shadow: inset 0 0 0 1px var(--macos-urlbar-border-color);
 	--macos-inactive-urlbar-color: var(--toolbar-field-color);
 	--macos-focused-urlbar-border-color: #338bbecc;
 	--macos-focused-urlbar-highlight-color: #006ea0cc;
@@ -169,9 +169,9 @@
 	--macos-menu-border: 1px solid var(--macos-menu-border-color);
 	--macos-menu-outline: 0.5px solid var(--macos-menu-outline-color);
 	--macos-menu-padding: 4px;
-	--macos-menu-border-radius: 6px;
-	--macos-menu-item-border-radius: 4px;
-	--macos-menu-item-padding: 4px 8px;
+	--macos-menu-border-radius: 8px;
+	--macos-menu-item-border-radius: 6px;
+	--macos-menu-item-padding: 4px 10px;
 	--macos-menu-item-margin: 0;
 	--macos-menu-button-hover-background: #ffffff33;
 	--macos-menu-button-active-background: #ffffff49;
@@ -273,15 +273,14 @@
 			--toolbar-field-focus-background-color
 		);
 		--macos-urlbar-border-color: var(--toolbar-field-border-color);
-		--macos-urlbar-box-shadow: 0 3px 3px #00000014, 0 5px 8px #0000000d,
-			0 8px 16px #00000008;
+		--macos-urlbar-box-shadow: inset 0 0 0 1px var(--macos-urlbar-border-color);
 		--macos-urlbar-color: var(--toolbar-field-color);
 		--macos-hover-urlbar-border-color: var(--toolbar-field-border-color);
 		--macos-inactive-urlbar-background: var(
 			--toolbar-field-background-color
 		);
 		--macos-inactive-urlbar-border-color: var(--toolbar-field-border-color);
-		--macos-inactive-urlbar-box-shadow: 0 3px 5px #0000000d;
+		--macos-inactive-urlbar-box-shadow: inset 0 0 0 1px var(--macos-urlbar-border-color);
 		--macos-inactive-urlbar-color: var(--toolbar-field-color);
 		--macos-focused-urlbar-border-color: #5683dacc;
 		--macos-focused-urlbar-highlight-color: #6592e9cc;
@@ -367,9 +366,9 @@
 		--macos-menu-border: 1px solid var(--macos-menu-border-color);
 		--macos-menu-outline: 0.5px solid var(--macos-menu-outline-color);
 		--macos-menu-padding: 4px;
-		--macos-menu-border-radius: 6px;
-		--macos-menu-item-border-radius: 4px;
-		--macos-menu-item-padding: 4px 8px;
+		--macos-menu-border-radius: 8px;
+		--macos-menu-item-border-radius: 6px;
+		--macos-menu-item-padding: 4px 10px;
 		--macos-menu-item-margin: 0;
 		--macos-menu-button-hover-background: #00000033;
 		--macos-menu-button-active-background: #0000004d;
