--- a/theme/parts/macos-urlbar-contents.css
+++ b/theme/parts/macos-urlbar-contents.css
@@ -171,6 +171,7 @@
 	border-radius: var(--macos-menu-border-radius) !important;
 	background: var(--macos-menu-background) !important;
 	border: var(--macos-menu-border) !important;
+	color: var(--macos-button-menulist-color) !important;
 	outline: var(--macos-menu-outline) !important;
 	box-shadow: 0 0 15px #00000040 !important;
 
@@ -179,12 +180,12 @@
 		min-height: 0 !important;
 		padding: 0 !important;
 		align-items: center !important;
-		border-radius: 4px !important;
+		border: none !important;
+		border-radius: var(--macos-menu-item-border-radius) !important;
 	}
 
 	.urlbarView-row-inner {
-		padding-inline: 10px !important;
-		padding-block: 2px !important;
+		padding: var(--macos-menu-item-padding) !important;
 	}
 
 	.urlbarView-favicon {
@@ -271,6 +272,8 @@
 	}
 
 	.urlbarView-body-inner {
+		width: 100% !important;
+		margin: 0 !important;
 		border: 0 !important;
 	}
 
